src/scss/layout/_site.scss
// -----------------------------------------------------------------------------
// This file contains overall layout styles
// -----------------------------------------------------------------------------

.site-container {
  max-width: 48em;
  margin: 0 auto;

  &__inner {
    padding: 0 0.5rem;

    @include mappy-bp(small) {
      padding: 0 1rem;
    }
  }
}

.site-header {
  $self: &;
  display: flex;
  padding: 1rem 0.5rem;
  align-items: center;
  justify-content: space-between;

  @include mappy-bp(small) {
    padding: 1rem;
  }

  &__nav {
    display: flex;
    align-items: center;
  }

  &__link {
    padding: 0;
    margin: 0;
    align-items: center;
    font-family: $font__title;
    font-size: 1em;
    font-weight: 700;
    line-height: 1.2;
    color: $color__theme;
    transition: color 0.2s;

    &:visited {
      color: $color__theme;
    }

    &:hover,
    &:focus {
      color: $color__dark;
    }
  }

  &__nav-item {
    padding: 0.25rem;
    font-size: 1em;
    color: $color__darkest;
    background:
       linear-gradient(
         to bottom,
         $color__theme 0%,
         $color__theme 100%
       );
    background-position: 0 100%;
    background-repeat: repeat-x;
    background-size: 4px 4px;
    text-decoration: none;
    transition: background-size 0.2s ease-in-out, color 0.2s;

    &:visited {
      color: $color__darkest;
    }

    &:hover,
    &:focus {
      color: #fff;
      background-size: 4px 100%;
    }

    &.active {
      color: #fff;
      background-size: 4px 100%;
    }
  }
}

.site-intro {
  padding: 0 0 2rem;

  @include mappy-bp(medium) {
    padding: 2rem 0 4rem;
  }

  &__title {
    margin: 0 0 1.3rem;
    font-size: 1.414em;

    @include mappy-bp(medium) {
      font-size: 1.999em;
    }
  }

  &__content {
    > p {
      margin: 0 0 1.3rem;
      font-size: 1.414em;

      @include mappy-bp(medium) {
        font-size: 1.999em;
      }
    }

    > p:last-child {
      margin-bottom: 0;
    }
  }
}

.site-list {
  &__list {
    padding-top: 1rem;

    @include mappy-bp(medium) {
      padding-top: 0;
    }
  }

  &__title {
    margin: 0;
    font-size: 1.999em;
    font-family: $font__title;
    line-height: 1.2;

    @include mappy-bp(medium) {
      padding-top: 2rem;
    }
  }

  &__type {
    color: $color__dark;
  }

  &__name {
    color: $color__mid;
  }

  &__intro {
    padding-top: 1rem;

    > p {
      margin: 0 0 1.3rem 0;
    }

    > p:last-child {
      margin-bottom: 0;
    }
  }
}

.site-footer {
  padding: 4rem 0 1rem;

  &__copyright {
    margin: 0;
    text-align: center;
  }

  &__hugo-logo {
    vertical-align: middle;
  }
}

